package ar.edu.unahur.obj2.ejercicio3;

public class NewsChannel10 {

    private String news;

    public String getNews() {
        return news;
    }

    public void changeNews(String news) {
        this.news = news;
    }

}
