package ar.edu.unahur.obj2.ejercicio3;

public class NewsChannel11 {

    private String news;

    public String getNews() {
        return news;
    }

    public void setNews(String news) {
        this.news = news;
    }

}
