package ar.edu.unahur.obj2.ejercicio3;

public class NewsPortal {

    private String news;

    public String getNews() {
        return news;
    }

    public void update(String news) {
        this.news = news;
    }

}
