package ar.edu.unahur.obj2.ejercicio3;

public class Radio900 {

    private String news;

    public String getNews() {
        return news;
    }

    public void updateNews(String news) {
        this.news = news;
    }

}
